# mrcarlsama-social-transcriber-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: manifest.example.json  示例视频标题原始逐字稿.example.md  示例视频标题逐字稿.example.md
skills/mrcarlsama-social-transcriber/: SKILL.md
skills/mrcarlsama-social-transcriber/agents/: openai.yaml
skills/mrcarlsama-social-transcriber/references/: auto-retry-policy.md  cookie-policy.md  failure-modes.md
skills/mrcarlsama-social-transcriber/scripts/: asr.py  bootstrap.py  media.py  preflight.py  report.py  run_one.py  verify.py
skills/mrcarlsama-social-transcriber/scripts/providers/: __init__.py  visitor_cookies.py  xhs_provider.py  yt_dlp_provider.py
